# Numeric

./: CMakeLists.txt  README.md  numeric2_input  numeric_input  numerics.txt
examples/: numeric.cpp
include/: Model.h  Model.hpp  Ops.h  Ops.hpp  Optimizer.h  Optimizer.hpp  Tensor.h  Tensor.hpp  Workspace.h  Workspace.hpp  utilities.hpp
src/: utilities.cpp
